# tic-tac-toe

./: .gitignore  README.md  pyproject.toml
game/: main.py
tic_tac_toe/: counter.py  field.py  game.py  main.py  player.py  templates.py
