[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = "A simple console game"
authors = ["Daria Veselkova <daria.veselkova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
